--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "lambda.js",
   "dependencies": {},
   "devDependencies": {
+    "@aws-cdk/aws-apigateway": "^1.98.0",
+    "@aws-cdk/aws-lambda": "^1.98.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.98.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.98.0",
+    "@aws-cdk/aws-logs": "^1.98.0",
+    "@aws-cdk/aws-stepfunctions": "^1.98.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.98.0",
+    "@aws-cdk/core": "^1.98.0",
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "chai": "^4.3.4",
+    "esbuild": "^0.11.9",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
@@ -22,8 +31,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-standard": "^5.0.0",
-    "prettier": "^2.2.1",
     "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -32,8 +41,10 @@
     "lint-and-fix": "eslint . --ext .ts --fix",
     "build": "npm run lint-and-fix && tsc",
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "package": "npm run build && copy .\\package.json .\\dist\\src\\functions",
-    "sam-build": "npm run package && sam build",
+    "sam-package": "npm run build && copy .\\package.json .\\dist\\src\\functions",
+    "sam-build": "npm run sam-package && sam build",
+    "sqs-synth": "tsc && cdk synth SQSFunctionTest",
+    "sqs-deploy": "tsc && cdk deploy SQSFunctionTest",
     "delete-stack": "aws cloudformation delete-stack --stack-name lambda-base --region eu-west-2"
   },
   "repository": {
